--- a/assets/css/mibooz.css
+++ b/assets/css/mibooz.css
@@ -362,6 +362,7 @@ ul {
     position: relative;
     display: block;
     display: flex;
+    align-items: center;
 }
 
 .main-menu-wrapper__logo {
