--- a/assets/css/mibooz.css
+++ b/assets/css/mibooz.css
@@ -23,8 +23,8 @@
     --mibooz-sayinistic-font: 'the_sayinisticitalic';
     --mibooz-gray: #707070;
     --mibooz-gray-rgb: 112, 112, 112;
-    --mibooz-primary: #dd0429;
-    --mibooz-primary-rgb: 221, 4, 41;
+    --mibooz-primary: #1dce1d;
+    --mibooz-primary-rgb: 29, 206, 29;
     --mibooz-black: #17161a;
     --mibooz-black-rgb: 23, 22, 26;
     --mibooz-base: #ffffff;
