--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,9 +23,9 @@
     --mibooz-sayinistic-font: 'the_sayinisticitalic';
     --mibooz-gray: #707070;
     --mibooz-gray-rgb: 112, 112, 112;
-    --mibooz-primary: #1dce1d;
-    --mibooz-primary-rgb: 29, 206, 29;
-    --mibooz-black: #17161a;
+    --mibooz-primary: #3d00f5;
+     --mibooz-primary-rgb: 29, 206, 29;
+    --mibooz-black: #3d00f5;
     --mibooz-black-rgb: 23, 22, 26;
     --mibooz-base: #ffffff;
     --mibooz-base-rgb: 255, 255, 255;
@@ -1302,7 +1302,7 @@ ul {
 
 .main-slider .swiper-slide {
     position: relative;
-    background-color: var(--mibooz-black);
+    background-color: rgba(0, 0, 0, 0.74);
 }
 
 .main-slider .image-layer {
@@ -1315,10 +1315,10 @@ ul {
     background-size: cover;
     background-position: center;
     transform: scale(1);
-    opacity: .15;
-    background-color: var(--mibooz-black);
+    /* opacity: .15; */
+    /* background-color: var(--mibooz-black); */
     background-blend-mode: luminosity;
-    transition: transform 7000ms ease, opacity 1500ms ease-in;
+    transition: transform 7000ms ease, ease-in;
     z-index: 1;
 }
 
@@ -2558,7 +2558,6 @@ ul {
     background-position: center;
     z-index: 1;
     mix-blend-mode: luminosity;
-    opacity: 0.30;
 }
 
 .design-studio__inner {
